Fixed currents banner z-index (top half was not clickable), fixed Maryland dropdown icon

--- a/Website/frontend/assets/css/_sass/partials/_currents.scss
+++ b/Website/frontend/assets/css/_sass/partials/_currents.scss
@@ -415,6 +415,7 @@ $local-meeting-color: #00a8e1;
 }
 .currents__carousel {
     margin-top: -180px;
+    z-index: 9999;
     @include breakpoint(small) {
         margin-top: 0;
     }
